src/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --font-sans: var(--font-inter);
  --font-sans--font-feature-settings: "cv02", "cv03", "cv04", "cv11";
  --font-mono: var(--font-plex-mono);
  --font-mono--font-feature-settings: "ss02", "zero";
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
}

/* https://ui.shadcn.com/themes */
/* https://tailwindcss.com/docs/colors#default-color-palette-reference */
:root {
  --radius: 1rem;
  --background: var(--color-white);
  --foreground: var(--color-zinc-900);
  --card: var(--color-white);
  --card-foreground: var(--color-zinc-900);
  --popover: var(--color-white);
  --popover-foreground: var(--color-zinc-900);
  --primary: var(--color-teal-500);
  --primary-foreground: var(--color-teal-50);
  --secondary: var(--color-zinc-100);
  --secondary-foreground: var(--color-zinc-900);
  --muted: var(--color-zinc-100);
  --muted-foreground: var(--color-zinc-600);
  --accent: var(--color-zinc-100);
  --accent-foreground: var(--color-zinc-900);
  --destructive: var(--color-red-600);
  --border: var(--color-zinc-200);
  --input: var(--color-zinc-200);
  --ring: var(--color-teal-500);
  --chart-1: var(--color-orange-600);
  --chart-2: var(--color-teal-600);
  --chart-3: var(--color-cyan-900);
  --chart-4: var(--color-amber-400);
  --chart-5: var(--color-amber-500);
  --sidebar: var(--color-zinc-100);
  --sidebar-foreground: var(--color-zinc-900);
  --sidebar-primary: var(--color-teal-500);
  --sidebar-primary-foreground: var(--color-teal-50);
  --sidebar-accent: var(--color-zinc-100);
  --sidebar-accent-foreground: var(--color-zinc-900);
  --sidebar-border: var(--color-zinc-200);
  --sidebar-ring: var(--color-teal-500);
}

.dark {
  --background: var(--color-zinc-900);
  --foreground: var(--color-zinc-100);
  --card: var(--color-zinc-900);
  --card-foreground: var(--color-zinc-100);
  --popover: var(--color-zinc-900);
  --popover-foreground: var(--color-zinc-100);
  --primary: var(--color-teal-400);
  --primary-foreground: var(--color-teal-950);
  --secondary: var(--color-zinc-800);
  --secondary-foreground: var(--color-zinc-100);
  --muted: var(--color-zinc-800);
  --muted-foreground: var(--color-zinc-400);
  --accent: var(--color-zinc-700);
  --accent-foreground: var(--color-zinc-100);
  --destructive: var(--color-red-400);
  --border: color-mix(in oklab, var(--color-white) 10%, transparent);
  --input: color-mix(in oklab, var(--color-white) 15%, transparent);
  --ring: var(--color-teal-700);
  --chart-1: var(--color-blue-700);
  --chart-2: var(--color-teal-500);
  --chart-3: var(--color-amber-500);
  --chart-4: var(--color-purple-500);
  --chart-5: var(--color-rose-500);
  --sidebar: var(--color-zinc-900);
  --sidebar-foreground: var(--color-zinc-100);
  --sidebar-primary: var(--color-teal-400);
  --sidebar-primary-foreground: var(--color-teal-950);
  --sidebar-accent: var(--color-zinc-700);
  --sidebar-accent-foreground: var(--color-zinc-100);
  --sidebar-border: color-mix(in oklab, var(--color-white) 10%, transparent);
  --sidebar-ring: var(--color-teal-700);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  html {
    scrollbar-color: var(--color-primary) var(--color-background);
  }

  body {
    @apply bg-background text-foreground selection:bg-primary selection:text-primary-foreground;
  }
}

